Optimize memory layout for ArrayMap.